<resources>
    <string name="app_name">Emex</string>
    <string name="Login">Login</string>
    <string name="Sign">Signup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">rahul@example.com</string>
    <string name="password_hint">hello</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Dont have an account ? Sign up</string>
    <string name="contact_txt">Contact number</string>
    <string name="contact_name_txt">Contact name</string>
    <string name="new_pass_text">New Password</string>
    <string name="re_pass_text">Re enter password</string>
    <string name="firstnm">First name</string>
    <string name="lastnm">Last name</string>
    <string name="email">Email here</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="support"> Support via Call/Email</string>
    <string name="driver_name">Driver name:</string>
    <string name="total_amount">Total Payable Amount:</string>
</resources>
