<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.emex.LoginFirstFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:id="@+id/background_imgview"
        android:scaleType="fitXY"
        />
    <ImageView
        android:layout_width="253dp"
        android:layout_height="162dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="54dp"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        />
    <ImageView
        android:layout_width="16dp"
        android:layout_height="11dp"
        android:layout_marginTop="288dp"
        android:layout_marginLeft="40dp"
        android:src="@drawable/icon_email"
        android:id="@+id/email_icon_imgview"
        />
    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginTop="342dp"
        android:layout_marginLeft="39dp"
        android:src="@drawable/icon_password"
        android:id="@+id/password_icon_imgview"
        />
    <EditText
        android:layout_width="159.5dp"
        android:layout_height="43dp"
        android:gravity="bottom"
        android:layout_marginTop="275.9dp"
        android:layout_marginLeft="67.5dp"
        android:id="@+id/email_editText"
        android:hint="@string/email_hint"
        android:textColor="@color/hint_Color"
        android:textColorHint="@color/dodger_Blue"
        android:textSize="17sp"
        />
    <View
        android:layout_width="292.5dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="311.6dp"
        android:layout_marginLeft="33.8dp"
        android:background="@color/dodger_Blue"

        />
    <EditText
        android:layout_width="93dp"
        android:layout_height="43dp"
        android:layout_marginTop="333.3dp"
        android:layout_marginLeft="67.5dp"
        android:id="@+id/password_editText"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/hint_Color"
        android:textColorHint="@color/dodger_Blue"
        android:textSize="17sp"
        />

    <View
        android:layout_width="292.5dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="369dp"
        android:layout_marginLeft="33.8dp"
        android:background="@color/dodger_Blue"
        />
    <Button
        android:layout_marginTop="386.4dp"
        android:layout_marginLeft="33.8dp"
        android:layout_width="292.5dp"
        android:layout_height="45dp"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:background="@drawable/login_button_shape"
        android:id="@+id/login_button"
        />
    <TextView
        android:layout_width="123dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/forgot_password"
        android:layout_marginTop="442.7dp"
        android:text="@string/forgot_password"
        android:textColor="@color/dodger_Blue"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="27dp"
        android:textColor="@color/dodger_Blue"
        android:textSize="16sp"
        android:id="@+id/dont_have_account"
        android:layout_marginTop="550.1dp"
        android:layout_marginLeft="64.5dp"
        />

</RelativeLayout>
