<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/my_toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:weightSum="11"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@drawable/user_placeholder"/>
            </RelativeLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:orientation="horizontal"
                   android:layout_height="match_parent">
                   <ImageView
                       android:layout_width="0dp"
                       android:layout_weight="1"
                       android:layout_height="match_parent"
                       android:src="@drawable/icon_name"
                       />
                   <EditText
                       android:layout_width="0dp"
                       android:layout_weight="4"
                       android:layout_height="match_parent"
                       android:hint="@string/firstnm"
                       android:id="@+id/first_name"
                       android:textColorHint="@color/line_color"
                       />
                   <ImageView
                       android:layout_width="0dp"
                       android:layout_weight="1"
                       android:layout_height="match_parent"
                       android:src="@drawable/icon_name"
                       />
                   <EditText
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight="4"
                       android:hint="@string/lastnm"
                       android:textColorHint="@color/line_color"
                       android:id="@+id/last_name"
                      />

               </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:id="@+id/name_line"
                    android:layout_alignParentBottom="true"
                    android:background="@color/line_color"
                    />
            </RelativeLayout>

        </LinearLayout>






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
                 <ImageView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:src="@drawable/icon_contact"
                     />
                 <EditText
                     android:layout_width="0dp"
                     android:layout_weight="5"
                     android:layout_height="match_parent"
                     android:id="@+id/contact_number"
                     android:hint="@string/contact_txt"
                     android:textColorHint="@color/line_color"/>

                  </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:id="@+id/contact_line"
                    android:layout_alignParentBottom="true"
                    android:background="@color/line_color"
                    />
            </RelativeLayout>
        </LinearLayout>









        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="horizontal">
                   <ImageView
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:src="@drawable/icon_name"
                       />
                   <EditText
                       android:layout_width="0dp"
                       android:layout_weight="5"
                       android:layout_height="match_parent"
                       android:id="@+id/contact_name"
                       android:hint="@string/contact_txt"
                       android:textColorHint="@color/line_color"/>

               </LinearLayout>

               <View
                   android:layout_width="match_parent"
                   android:layout_height="0.6dp"
                   android:id="@+id/contact_name_line"
                   android:layout_alignParentBottom="true"
                   android:background="@color/line_color"
                   />
           </RelativeLayout>

</LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:src="@drawable/icon_email"
                            />

                        <EditText
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="match_parent"
                            android:id="@+id/email_id"
                            android:hint="@string/email"
                            android:textColorHint="@color/line_color"
                           />
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.6dp"
                        android:id="@+id/contact_email_line"
                        android:layout_alignParentBottom="true"
                        android:background="@color/line_color"
                        />
                </RelativeLayout>
            </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/icon_password"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="match_parent"
                    android:id="@+id/password"
                    android:hint="Password"
                    android:textColorHint="@color/line_color"
                    />

          </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:id="@+id/password_line"
                    android:layout_alignParentBottom="true"
                    android:background="@color/line_color"
                    />

            </RelativeLayout>


        </LinearLayout>









        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/icon_password"
                        />
                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="match_parent"
                        android:id="@+id/conf_password"
                        android:hint="Confirm Password"
                        android:textColorHint="@color/line_color"
                        />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:id="@+id/password_conf_line"
                    android:layout_alignParentBottom="true"
                    android:background="@color/line_color"
                    />

            </RelativeLayout>

        </LinearLayout>








        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
               android:layout_weight="2"
                android:src="@drawable/btn_accepted_terms"
                android:id="@+id/term_btn"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:id="@+id/blue_tick_test"
                />
        </LinearLayout>






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/login_button_shape"
                android:text="Signup"
                android:textColor="@color/white"
                android:id="@+id/continue_btn"
                android:gravity="center"

                />
            </RelativeLayout>
      </LinearLayout>



     </LinearLayout>





    </LinearLayout>






